/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'org.springframework.boot' version '2.7.18'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
    id 'maven-publish'
}

group = 'com.devkbil'
version = '0.0.1-SNAPSHOT'
description = 'mtsSBJ'
java.sourceCompatibility = JavaVersion.VERSION_1_8

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

ext {
    set('springBootAdminVersion', "2.7.11")
}

repositories {
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
    maven { url 'https://repo.maven.apache.org/maven2/' }
    mavenCentral()
    maven {
        url 'https://repo.clojars.org'
        name 'Clojars'
    }
}

dependencies {

    //implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.2'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'com.navercorp.lucy:lucy-xss:1.6.3'
    implementation 'com.navercorp.lucy:lucy-xss-servlet:2.0.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.5'
    implementation 'org.hibernate.validator:hibernate-validator'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'de.codecentric:spring-boot-admin-starter-client:2.7.11'

    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    implementation 'com.fasterxml.jackson.module:jackson-module-jaxb-annotations:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

    implementation 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
    runtimeOnly 'com.oracle.database.jdbc:ojdbc8:21.9.0.0'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.2.0'

    implementation 'org.springframework.data:spring-data-elasticsearch'
    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client'

    testImplementation 'org.testcontainers:elasticsearch:1.19.1'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.2'
    implementation 'org.springframework.boot:spring-boot-test'
    //implementation 'org.springframework:spring-test:5.3.25'
    implementation 'junit:junit:4.13.2'
    implementation 'org.junit.jupiter:junit-jupiter-migrationsupport:5.10.0'

    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.73'
    implementation 'javax.servlet:jstl:1.2'
    implementation 'cglib:cglib:3.3.0'

    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'
    implementation 'org.slf4j:slf4j-api:1.7.36'
    implementation 'ch.qos.logback:logback-core:1.2.11'
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    implementation 'org.slf4j:jcl-over-slf4j:1.7.36'

    implementation 'commons-io:commons-io:2.11.0'
    implementation 'commons-fileupload:commons-fileupload:1.5'
    implementation 'com.sun.mail:javax.mail:1.6.2'

    implementation 'net.sf.jxls:jxls-core:1.0.6'
    implementation 'org.jxls:jxls:2.12.0'
    implementation 'org.jxls:jxls-poi:2.12.0'
    implementation 'org.jxls:jxls-jexcel:1.0.9'
    implementation 'org.apache.poi:poi:5.2.2'
    implementation 'org.apache.poi:poi-ooxml:5.2.2'
    implementation 'org.apache.tika:tika-core:2.5.0'
    implementation 'org.apache.tika:tika-parsers:2.5.0'

    implementation 'io.springfox:springfox-swagger2:3.0.0'
    implementation 'io.swagger.parser.v3:swagger-parser-v3:2.1.16'
    implementation 'io.springfox:springfox-bean-validators:2.10.5'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'

    implementation 'com.jcraft:jsch:0.1.55'
    implementation 'org.eclipse.jgit:org.eclipse.jgit:5.8.1.202007141445-r'
    implementation 'org.apache.pdfbox:pdfbox:2.0.29'


    implementation fileTree(dir: 'lib', include: ['*.jar'])
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.named('test') {
    useJUnitPlatform()
}
